Step2: 자동차 경주 리팩토링 (#4766)
* refactor: 중괄호 아래에 line break 추가

* test: 테스트를 위해 재정의했던 equals()와 hashcode() 삭제

* test: 테스트 케이스 null 추가

* refactor: Cars에서 Position을 고려하지 않도록 변경

* refactor: Comparable 대신 객체에게 메시지를 보낼 수 있는 메서드로 대체

* refactor: Cars에서 최소 경주 인원을 고려하지 않도록 변경

* refactor: 변하지 않아도 되는 변수에 final 추가

* refactor: 의미가 드러나는 변수명으로 변경

* refactor: View에서만 getter를 사용하도록 변경

* refactor: 테스트에서만 사용되는 생성자 제거

* refactor: Position 조작을 Car와 관련된 패키지 내에서만 할 수 있도록 변경

* refactor: 피연산자에 해당하는 클래스 정의

* refactor: 확실한 의미를 가지는 변수명으로 수정